package fr.esgi.services;

import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;

@AllArgsConstructor
@NoArgsConstructor
@Data
public class GameServiceImpl implements GameService {

    private GameService gameService;

    public void startGame(){

    }

    public void endGame(){

    }

    private void saveScore(){

    }
}
