@startuml

' Package contenant la logique principale du jeu et des joueurs
package fr.esgi.business {
  ' Classe qui gère les informations du joueur
  class Player {
    - name: String
    - score: int
    + enterName(name: String): void
    + updateScore(newScore: int): void
  }

  ' Classe qui gère le jeu Simon, incluant les scores et la séquence de jeu
  class SimonGame {
    - score: int
    - sequence: List<String>
    - currentPlayer: Player
    - maxLevel: int = 16
    + startGame(): void
    + playTurn(): void
    + checkSequence(input: List<String>): boolean
    + endGame(): void
  }
}

' Package contenant les services pour la gestion du jeu et des joueurs
package fr.esgi.service {
  ' Interface définissant les services pour gérer le jeu
  interface GameService {
    + startGame(): void
    + endGame(): void
  }

  ' Implémentation du service de gestion du jeu
  class GameServiceImpl implements GameService {
    - game: SimonGame
    + startGame(): void
    + endGame(): void
    + saveScore(player: Player): void
  }

  ' Interface définissant les services pour gérer les joueurs
  interface PlayerService {
    + createPlayer(name: String): Player
    + updateScore(player: Player, score: int): void
  }

  ' Implémentation du service de gestion des joueurs
  class PlayerServiceImpl implements PlayerService {
    + createPlayer(name: String): Player
    + updateScore(player: Player, score: int): void
  }
}

' Package contenant les contrôleurs pour orchestrer les interactions entre la vue et les services
package fr.esgi.controller {
  ' Contrôleur pour gérer les interactions avec le jeu
  class GameController {
    - gameService: GameService
    + startGame(): void
    + handlePlayerInput(input: List<String>): boolean
    + endGame(): void
  }

  ' Contrôleur pour gérer les interactions avec les joueurs
  class PlayerController {
    - playerService: PlayerService
    + createPlayer(name: String): Player
    + updatePlayerScore(name: String, score: int): void
  }
}

' Package contenant les utilitaires pour la gestion des sons
package fr.esgi.util {
  ' Classe qui gère les sons utilisés dans le jeu
  class SoundManager {
    - soundFiles: Map<String, String>
    + playSound(color: String): void
    + changeSoundSetting(soundType: String): void
  }
}

' Package contenant les fichiers FXML pour les différentes fenêtres de l'interface utilisateur
package fr.esgi.fxml {
  class WindowAccueil {}
  class WindowChoice {}
  class WindowConf {}
  class WindowCredits {}
  class WindowGame {}
  class WindowInput {}
  class WindowScore {}
}

' Relations entre les classes
SimonGame --> Player : current player
GameServiceImpl --> SimonGame : manages
PlayerServiceImpl --> Player : manages
GameController --> GameService : uses
PlayerController --> PlayerService : uses
SoundManager --> SimonGame : used by

@enduml
